<resources>
    <string name="app_name">QuizApp</string>
    <string name="app_title">The List</string>
    <string name="menu_item1">Random</string>
    <string name="menu_item2">Categories</string>
    <string name="menu_item3">Rankings</string>
    <string name="menu_item4">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_quiz">Play Quiz</string>
    <string name="quit_game">Quit Game</string>
    <string name="submit_answers_button_text">Submit</string>
    <string name="btn_results_restart_txt">Try Again</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="login_description">\'A quiz app\' - Ben Holland</string>
</resources>
